<resources>
    <string name="app_name">Koinonia</string>
    <string name="home">Koinonia</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="ctd_timer">Time Till Next Event:</string>
    <string name="ctd_timer_running">Service in Progress</string>
    <string name="event_ongoing">Opening Prayers</string>
    <string name="bulletin">BULLETIN</string>
    <string name="tweets">TWEETS</string>
    <string name="birthdays">BIRTHDAYS</string>
    <string name="weddings">WEDDINGS</string>
    <string name="bulletin_btn_desc">Bulletin</string>
    <string name="tweets_btn_desc">Tweets</string>
    <string name="birthdays_btn_desc">Birthdays</string>
    <string name="weddings_btn_desc">Weddings</string>
    <string name="_00">00</string>
    <string name="days">Days</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="cake">Cake</string>
    <string name="birthdays_this_month">birthdays this month</string>
    <string name="weddings_background_image">Weddings Background Image</string>
    <string name="weddings_this_year">Weddings this year</string>
    <string name="date_image">Date Image</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="hosted_by">Hosted By</string>
    <string name="apostle_joshua_selman">Apostle Joshua Selman</string>
    <string name="title_activity_sermons">Sermons</string>
    <string name="tab_text_1">Yearly</string>
    <string name="tab_text_2">Categories</string>
    <string name="tab_text_3">Preacher</string>
    <string name="action_search">Search</string>
    <string name="section_format">Current Selection: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_downloads">Downloads</string>
    <string name="title_activity_bulletins">Bulletins</string>
    <string name="copy_right" translatable="false">Copyright Lyshnia Limited %1$d</string>
    <string name="about_desc" translatable="false">Official App for Koinonia a place of intimacy with God organised by Eternity Network International where people experience WORSHIP, WORD, MIRACLES and LOVE.</string>
    <string name="live_radio_text">Live Radio</string>
</resources>
