<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_home" />

        <android.support.v4.widget.SwipeRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_bg"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/timerLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="@string/ctd_timer"
                        android:textColor="@color/colorAccent"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/eventHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/linear_layout_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/black"
                        android:gravity="center_horizontal"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tv_event"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:text="@string/event_ongoing"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/black"
                        android:baselineAligned="false"
                        android:visibility="visible">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_days"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/_00"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_days_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/days"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="normal" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_hour"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/_00"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_hour_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/hour"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="normal" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_minute"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/_00"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_minute_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/minute"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="normal" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_second"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/_00"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_second_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/second"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="normal" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="142dp"
                        android:layout_margin="10dp"
                        android:onClick="bulletin"

                        app:cardCornerRadius="2dp"
                        app:cardElevation="10dp">

                        <RelativeLayout
                            android:id="@+id/card_bulletin"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#D066FA">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="100dp"
                                android:layout_height="84dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:contentDescription="@string/bulletin_btn_desc"
                                android:paddingTop="11dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/bulletin" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="20dp"
                                android:fontFamily="serif-monospace"
                                android:text="@string/bulletin"
                                android:textColor="@color/cardview_light_background"
                                android:textSize="24sp"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="154dp"
                        android:layout_margin="10dp"
                        android:background="#D066FA"
                        android:onClick="tweets"

                        app:cardCornerRadius="2dp"
                        app:cardElevation="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#FF605F">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:contentDescription="@string/tweets_btn_desc"
                                android:paddingTop="11dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/tweet" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="20dp"
                                android:fontFamily="serif-monospace"
                                android:text="@string/tweets"
                                android:textColor="@color/cardview_light_background"
                                android:textSize="24sp"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="154dp"
                        android:layout_margin="10dp"
                        android:background="#D066FA"
                        app:cardCornerRadius="2dp"

                        app:cardElevation="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#96D101">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="84dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="11dp"
                                android:contentDescription="@string/birthdays_btn_desc"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/ic_cake_black_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="20dp"
                                android:fontFamily="serif-monospace"
                                android:text="@string/birthdays"
                                android:textColor="@android:color/background_light"
                                android:textSize="24sp"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="154dp"
                        android:layout_margin="10dp"
                        android:background="#D066FA"
                        app:cardCornerRadius="2dp"

                        app:cardElevation="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#01A7FE">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="84dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="11dp"
                                android:contentDescription="@string/weddings_btn_desc"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/wedding" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="20dp"
                                android:fontFamily="serif-monospace"
                                android:text="@string/weddings"
                                android:textColor="@color/cardview_light_background"
                                android:textSize="24sp"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@android:color/white">

        <com.mindorks.placeholderview.PlaceHolderView
            android:id="@+id/drawerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </FrameLayout>
</android.support.v4.widget.DrawerLayout>