<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_home" />


        <ImageView
            android:id="@+id/bgImageWedding"
            android:layout_width="386dp"
            android:layout_height="257dp"
            android:contentDescription="@string/weddings_background_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/wedding_bg" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bgImageWedding">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="87dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="78dp"
                    android:layout_height="86dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="11dp"
                    android:layout_marginStart="11dp"
                    android:contentDescription="@string/weddings"
                    app:srcCompat="@drawable/wedding_black" />


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textView"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="casual"
                    android:text="@string/weddings_this_year" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="56dp"
                    android:layout_height="51dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="7"
                    android:textSize="37sp"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="78dp"
                    android:layout_height="86dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="11dp"
                    android:layout_marginRight="11dp"
                    android:contentDescription="@string/cake"
                    app:srcCompat="@drawable/wedding_black" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="154dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wedding_scroll"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/couple1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="1. Zack &amp; Jennifer - 28th March"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/couple2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="2. Festus &amp; Joyce - 17th April"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/couple3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="3. Ademola &amp; Simi - 2nd June"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/couple4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="4. Japhet &amp; Jennifer - 4th June"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/couple5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="5. Jimson &amp; Confidence - 3rd August"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/couple6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="6. Clemence &amp; Bisi - 1st September"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/couple7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="7. Joshua &amp; Joyce - 9th December"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>


    <FrameLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@android:color/white">

        <com.mindorks.placeholderview.PlaceHolderView
            android:id="@+id/drawerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </FrameLayout>
</android.support.v4.widget.DrawerLayout>